--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <!--Hero-section-starts-->
         
               
-        <div class="hero-section1">
+        <div class="hero-section1 ">
                   <!-- inner-boxes-start -->
             <div class="innerboxes">
               <div class="inner-header">
@@ -115,8 +115,8 @@
             <!-- hero-section2-start -->
 <div class="hero-section-2">
                   <!-- section-1-start -->
-            <div class="section-box1">
-                <div class="section-2-header">
+            <div class="section-box1 ">
+                <div class="section-2-header rows col-lg-4 col-md-6 col-sm-12">
                     <p>LEARN FULL-STACK WEB DEVELOPMENT</p>
                 </div>
                 <div class="our-courses">
@@ -230,7 +230,8 @@
                     <div class="lakhs41">From AccioJob upto 41 Lakhs</div>  
                 </div>
 
-                <div class="comp-logo">
+                <div class="comp-logo d-flex">
+
                    <div class="image-row1">
                        <img class="my-companies" src="https://acciojob.com/src/CompaniesLogo/HiringPartner/12_Innovacer.webp" alt="random">
                        <img class="my-companies" src="https://acciojob.com/src/CompaniesLogo/HiringPartner/37_celebal.webp" alt="random">
